FIX: respect the align and width parameter of table directives (#968)
* fix: respect the width instructions

* fix: respect the align parameter

* default to center

--- a/src/pydata_sphinx_theme/assets/styles/content/_tables.scss
+++ b/src/pydata_sphinx_theme/assets/styles/content/_tables.scss
@@ -10,6 +10,18 @@ table {
   overflow: auto;
 
   @include scrollbar-style();
+
+  // default to table-center
+  margin-left: auto;
+  margin-right: auto;
+
+  &.table-right {
+    margin-right: 0;
+  }
+
+  &.table-left {
+    margin-left: 0;
+  }
 }
 
 // customize table caption from bootstrap
